// 调用的 gradle 插件
plugins {
    id 'java-library'

    // 用于 eclipse 或者 idea 的插件
    id 'eclipse'
    id 'idea'

    // 用于发布 maven 时所需的插件
    id 'maven-publish'

    // NeoForged 开发插件
    id 'net.neoforged.gradle.userdev' version '7.0.184'

    // Shadow 插件，用于打包依赖到 jar 包里
    id 'com.gradleup.shadow' version '8.3.6'
}

// ALL 为下载 gradle 源码，方便查看调试
tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.ALL
}

// 模组相关信息
version = mod_version
group = mod_group_id

// 需要的前置库，目前没有
repositories {
    // mavenLocal 为本机仓库
    mavenLocal()
}

// 打包成 jar 时的名称
archivesBaseName = 'netmusic'

// 需要 Java 21 版本
java.toolchain.languageVersion = JavaLanguageVersion.of(21)

// accessTransformers，注意 1.21 已经不再使用 srg 了
minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

// 运行部分
runs {
    configureEach {
        // +AllowEnhancedClassRedefinition 为 JetBrains Runtime 所需的参数
        // JetBrains Runtime 是一个修改过的 JDK，支持热重载
        // +IgnoreUnrecognizedVMOptions 用于忽略未知指令
        // 否则没有安装 JetBrains Runtime 的用户运行时会报错
        jvmArguments = [
                '-XX:+IgnoreUnrecognizedVMOptions',
                '-XX:+AllowEnhancedClassRedefinition',
                // 开启 HTTP 请求日志，方便调试
                "-Djdk.httpclient.HttpClient.log=requests,responses,headers,errors"

        ]
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'debug'
        modSource project.sourceSets.main

        dependencies {
            runtime 'com.googlecode.soundlibs:mp3spi:1.9.5.4'
            runtime 'libs:jflac-codec:1.5.3-SNAPSHOT'
            runtime 'libs:javasound-aac:0.9.6'
        }
    }

    client {
        // 设置运行后玩家的名称
        programArguments = ["--username", "mayday"]
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    // 新建 client2，方便本机进行互联调试
    client2 {
        configure "client"
        // 单独放一个客户端文件夹
        workingDirectory 'runs/client2'
        programArguments = ["--username", "tartaric_acid"]
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        programArgument '--nogui'
    }

    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
    }

    data {
        programArguments.addAll '--mod', project.mod_id, '--all',
                '--output', file('src/generated/resources/').getAbsolutePath(),
                '--existing', file('src/main/resources/').getAbsolutePath()
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    // ./libs 目录为库
    flatDir {
        dir "libs"
    }
    maven {
        name = "Curse Maven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        // location of the maven that hosts JEI files since January 2023
        name = "Jared's maven"
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "mezz.jei"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        // location of a maven mirror for JEI files, as a fallback
        name = "ModMaven"
        url = "https://modmaven.dev"
        content {
            includeGroup "mezz.jei"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        url = "https://maven.ryanhcode.dev/releases"
        name = "RyanHCode Maven"
        content {
            includeGroup "dev.ryanhcode.sable"
            includeGroup "dev.ryanhcode.sable-companion"
        }
    }
}

dependencies {
    // 目前仅以 neoforge 作为前置
    implementation "net.neoforged:neoforge:${neo_version}"

    // mp3 播放库
    implementation 'com.googlecode.soundlibs:mp3spi:1.9.5.4'
    // aac/m4a 播放库
    implementation 'libs:javasound-aac:0.9.6'
    // flac 播放库
    implementation 'libs:jflac-codec:1.5.3-SNAPSHOT'

    // 女仆模组兼容
    implementation 'maven.modrinth:touhou-little-maid:1.5.2-neoforge+mc1.21.1'

    // Cloth Config (配置界面库)
    implementation "maven.modrinth:cloth-config:15.0.140+neoforge"

    // IPN
    runtimeOnly "maven.modrinth:kotlin-for-forge:5.4.0"
    runtimeOnly "maven.modrinth:libipn:neoforge-1.21-6.0.2"
    implementation "maven.modrinth:inventory-profiles-next:neoforge-1.21-2.0.4"

    // JEI
    runtimeOnly("mezz.jei:jei-1.21.1-neoforge:19.21.1.310")

    // Sound Physics Remastered
    runtimeOnly("maven.modrinth:sound-physics-remastered:neoforge-1.21.1-1.5.1")

    // Sophisticated Backpacks
    implementation "maven.modrinth:sophisticated-core:1.21.1-1.4.2.1467"
    implementation "maven.modrinth:sophisticated-backpacks:1.21.1-3.25.25.1514"

    // 机械动力航空学
    implementation "maven.modrinth:create-aeronautics:1.2.1+mc1.21.1-neoforge"
    implementation "maven.modrinth:create:6.0.10+mc1.21.1-neoforge"
    implementation "maven.modrinth:sable:1.2.2+mc1.21.1-neoforge"
    implementation "dev.ryanhcode.sable-companion:sable-companion-common-1.21.1:1.6.0"
}

// 用于 neoforge.mods 里替换那一堆 ${xxxx}
tasks.withType(ProcessResources).configureEach {
    filteringCharset = 'UTF-8'
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

shadowJar {
    dependencies {
        include(dependency("com.googlecode.soundlibs:mp3spi:1.9.5.4"))
        include(dependency("com.googlecode.soundlibs:jlayer:1.0.1.4"))
        include(dependency("com.googlecode.soundlibs:tritonus-share:0.3.7.4"))
        include(dependency("libs:jflac-codec:1.5.3-SNAPSHOT"))
        include(dependency("libs:javasound-aac:0.9.6"))
    }

    relocate 'javazoom.jl', 'com.github.tartaricacid.netmusic.soundlibs.javazoom.jl'
    relocate 'javazoom.spi', 'com.github.tartaricacid.netmusic.soundlibs.javazoom.spi'
    relocate 'org.tritonus', 'com.github.tartaricacid.netmusic.soundlibs.org.tritonus'
    relocate 'org.jflac', 'com.github.tartaricacid.netmusic.soundlibs.org.jflac'
    relocate 'net.sourceforge.jaad', 'com.github.tartaricacid.netmusic.soundlibs.net.sourceforge.jaad'

    // 排除不需要的依赖项和资源
    exclude 'META-INF/maven/**/*'
    exclude 'META-INF/versions/**/*'
    // 这个版权许可都已经手动添加进 licenses 里了
    exclude 'META-INF/LICENSE'

    mergeServiceFiles()
}

jar {
    enabled = false // 禁用默认的 jar 任务
}


assemble {
    dependsOn shadowJar
}

java {
    // 编译源码文件，方便发布 maven
    withSourcesJar()
}

// 必须，编码需要显式指定为 UTF
tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

// 让 idea 主动下载前置库的源码和 Javadoc
// 新版本 idea 默认不会下载这两个，这虽然加快了构建速度，但是不方便调试
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
